c/examples/writing-a-c-compiler-tests/tests/chapter_14/invalid_types/multiply_pointers.c
/* It's illegal to multiply, divide, or take the modulo of pointers */
int main(void) {
    int *x = 0;
    int *y = x;
    (x * y);
    return 0;
}